--- a/DameCita/pom.xml
+++ b/DameCita/pom.xml
@@ -132,26 +132,36 @@
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>resteasy-jaxrs</artifactId>
 			<version>3.0.6.Final</version>
+        <type>pom</type>
+        <scope>import</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>resteasy-client</artifactId>
 			<version>3.0.6.Final</version>
+        <type>pom</type>
+        <scope>import</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>resteasy-jaxb-provider</artifactId>
 			<version>3.0.6.Final</version>
+        <type>pom</type>
+        <scope>import</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>jaxrs-api</artifactId>
 			<version>3.0.6.Final</version>
+        <type>pom</type>
+        <scope>import</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>resteasy-multipart-provider</artifactId>
 			<version>3.0.6.Final</version>
+        <type>pom</type>
+        <scope>import</scope>
 		</dependency>
 	 </dependencies>
   <build>
