--- a/DameCita/src/main/webapp/WEB-INF/web.xml
+++ b/DameCita/src/main/webapp/WEB-INF/web.xml
@@ -1,36 +1,17 @@
-<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<web-app xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="3.0" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
-<display-name>DameCita</display-name>
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0">
+  <display-name>DameCita</display-name>
   <session-config>
-  <session-timeout>30</session-timeout>
+    <session-timeout>30</session-timeout>
   </session-config>
   <mime-mapping>
-  <extension>ico</extension>
+    <extension>ico</extension>
     <mime-type>image/x-icon</mime-type>
   </mime-mapping>
   <welcome-file-list>
-  <welcome-file>/index.html</welcome-file>
+    <welcome-file>/index.html</welcome-file>
     <welcome-file>/index.html</welcome-file>
     <welcome-file>/index.html</welcome-file>
     <welcome-file>/index.html</welcome-file>
   </welcome-file-list>
-<servlet>
-    <servlet-name>Resteasy</servlet-name>
-    <servlet-class>org.jboss.resteasy.plugins.server.servlet.HttpServletDispatcher</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>Resteasy</servlet-name>
-    <url-pattern>/rest/*</url-pattern>
-  </servlet-mapping>
-  <context-param>
-    <param-name>javax.ws.rs.Application</param-name>
-    <param-value>es.prueba.damecita.rest.JaxRsActivator</param-value>
-  </context-param>
-  <context-param>
-    <param-name>resteasy.servlet.mapping.prefix</param-name>
-    <param-value>/rest</param-value>
-  </context-param>
-  <listener>
-    <listener-class>org.jboss.resteasy.plugins.server.servlet.ResteasyBootstrap</listener-class>
-  </listener>
 </web-app>
